# allisbns

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: test_merge.py
docs/: conf.py  cookbook.rst  examples.rst  index.rst  overview.rst
docs/api/: allisbns.dataset.rst  allisbns.errors.rst  allisbns.isbn.rst  allisbns.merge.rst  allisbns.plotting.rst  allisbns.ranges.rst  allisbns.rearrange.rst  index.rst
examples/: README.md  calculate-percentage.py  common.py  compare-dumps.ipynb  find-unique-isbns.ipynb  getting-started.ipynb  merge-datasets.ipynb  plot-all-groups.ipynb  plot-all-isbns.ipynb  plot-binned-images.ipynb  plot-cover-image.ipynb
scripts/: convert-bencoded-to-h5.py  create-ranges-file.py
src/allisbns/: dataset.py  errors.py  hdf5.py  isbn.py  merge.py  plotting.py  ranges.py  rearrange.py
tests/: test_dataset.py  test_isbn.py  test_merge.py  test_plotting.py  test_rearrange.py
